force-app/main/default/objects/RT1__UserSettings__c/RT1__UserSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Readytalk User Settings</label>
</CustomObject>