force-app/main/default/objects/RT1__UserSettings__c/fields/RT1__CreateNewLeads__c.field-meta.xml
<CustomField>
    <fullName>RT1__CreateNewLeads__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create New Leads</label>
    <type>Checkbox</type>
</CustomField>