force-app/main/default/objects/RT1__UserSettings__c/fields/RT1__DefaultLeadSource__c.field-meta.xml
<CustomField>
    <fullName>RT1__DefaultLeadSource__c</fullName>
    <label>Default Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>