force-app/main/default/objects/RT1__UserSettings__c/fields/RT1__LeadAssignmentBehavior__c.field-meta.xml
<CustomField>
    <fullName>RT1__LeadAssignmentBehavior__c</fullName>
    <label>Lead Assignment Behavior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>