force-app/main/default/objects/RT1__UserSettings__c/fields/RT1__LeadAssignmentRuleId__c.field-meta.xml
<CustomField>
    <fullName>RT1__LeadAssignmentRuleId__c</fullName>
    <label>Lead Assignment Rule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>