force-app/main/default/objects/RT1__UserSettings__c/fields/RT1__SyncAutomatically__c.field-meta.xml
<CustomField>
    <fullName>RT1__SyncAutomatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Automatically</label>
    <type>Checkbox</type>
</CustomField>