force-app/main/default/objects/RT1__UserSettings__c/fields/RT1__UpdateLeadsWithCcData__c.field-meta.xml
<CustomField>
    <fullName>RT1__UpdateLeadsWithCcData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Leads With CC Data</label>
    <type>Checkbox</type>
</CustomField>